--- a/index1.html
+++ b/index1.html
@@ -1,93 +1,20 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<title>Latihan Membuat Form</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<script type="text/javascript" src="copperlichtdata/copperlicht.js"></script>
 </head>
 <body>
- 
-<!--Membuat Form-->
-<h1>Formulir Mahasiswa</h1>	
-<form>
-	<table>
-		<tr>
-			<td>Nama</td>
-			<td>:</td>
-			<td><input type="text" name="nama" placeholder="Nama"></td>
-		</tr>
-		<tr>
-			<td>NPM</td>
-			<td>:</td>
-			<td><input type="text" name="npm" placeholder="NPM"></td>
-		</tr>
-		<tr>
-			<td>Kelas</td>
-			<td>:</td>
-			<td><input type="text" name="kelas" placeholder="Kelas"></td>
-		</tr>
-		<tr>
-			<td>Jenis Kelamin</td>
-			<td>:</td>
-			<td>
-			<input type="radio" name="j_kel" value="Male">Male
-			<input type="radio" name="j_kel" value="Female">Female
-			</td>
-		</tr>
-		<tr>
-			<td>Tanggal Lahir</td>
-			<td>:</td>
-			<td>
-				<input type="date" name="tgl_lahir">
-			</td>
-		</tr>
-		<tr>
-		<tr>
-			<td>Alamat</td>
-			<td>:</td>
-			<td>
-				<textarea name="alamat" placeholder="Alamat"></textarea>
-			</td>
-		</tr>
-		<tr>
-			<td>Hobi</td>
-			<td>:</td>
-			<td>
-				<input type="checkbox" name="hobi" value="Main Game">Main Game
-				<input type="checkbox" name="hobi" value="Belajar">Belajar
-				<input type="checkbox" name="hobi" value="Menonton Film">Menonton Film
-			</td>
-		</tr>
-			<td>Jurusan</td>
-			<td>:</td>
-			<td>
-				<select name="jurusan">
-					<option>--Pilih--
-					<option>Sistem Informasi
-					<option>Teknik Informatika
-					<option>Teknik Inustri
-					<option>Psikologi
-				</select>
-			</td>
-		</tr>
-		<tr>
-			<td>Fakultas</td>
-			<td>:</td>
-			<td>
-				<select name="fakultas">
-					<option>--Pilih--
-					<option>Teknologi Industri
-					<option>Ilmu Komputer
-					<option>Psikologi
-					<option>Ekonomi
-				</select>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<input type="submit" value="Submit">
-				<input type="reset" value="Reset">
-			</td>
-		</tr>
-	</table>
-</form>
+	<div align="center">
+		<canvas id="3darea" width="800" height="600" style="background-color:#"#000000"">
+		</canvas>
+	</div>
+	<script type="text/javascript">
+	<!--
+			startCopperLichtFromFile('3darea', 'copperlichtdata/coppercube.ccbz', 'Loading $PROGRESS$...<br/><br/><img style="max-width:50%" src="copperlichtdata/coppercubeloadinglogo.png" />', 'Error: This browser does not support WebGL (or it is disabled).<br/>See <a href=\"http://www.ambiera.com/copperlicht/browsersupport.html\">here</a> for details.', false, true, "#000000");
+	-->
+	</script>
+	<br/>
+	<div align="center">
+		<small>Created using <a href="http://www.ambiera.com/coppercube/index.html">CopperCube</a></small>	</div>
 </body>
 </html>
